--- a/src/app/components/layout/navbar/navbar.component.scss
+++ b/src/app/components/layout/navbar/navbar.component.scss
@@ -282,6 +282,12 @@
   color: nav.$navbar-text-dark !important;
   transition: nav.$navbar-transition;
 
+  backdrop-filter: blur(9px) saturate(189%);
+  -webkit-backdrop-filter: blur(9px) saturate(189%);
+  background-color: rgba(17, 25, 40, 0.6);
+  border-radius: 0;
+  border: 1px solid rgba(255, 255, 255, 0.125);
+
   &:hover {
     background-color: rgba(59, 130, 246, 0.08);
   }
