fix: pasamos availability_id

--- a/src/app/shared/product-card/product-list/product-list.html
+++ b/src/app/shared/product-card/product-list/product-list.html
@@ -17,6 +17,7 @@
             *ngFor="let product of products; trackBy: trackByProductId"
             mode="product"
             [id]="product.id"
+            [availability_id]="product.availability_id"
             [title]="product.title"
             [description]="product.description"
             [price]="product.price"
@@ -45,6 +46,7 @@
             *ngFor="let package of packages; trackBy: trackByPackageId"
             mode="package"
             [id]="package.id"
+            [availability_id]="package.availability_id"
             [title]="package.title"
             [description]="package.description"
             [price]="package.price"
