--- a/src/app/components/layout/navbar/navbar.component.scss
+++ b/src/app/components/layout/navbar/navbar.component.scss
@@ -56,7 +56,7 @@
 .planet-logo {
   @include mq.nav-logo-responsive;
   
-  &{
+  & {
     transition: nav.$navbar-transition;
   }
 
@@ -110,7 +110,7 @@
 .nav-link {
   @include mixins.nav-link;
 
-  &{
+  & {
     color: nav.$navbar-text;
   }
 
@@ -192,123 +192,17 @@
   color: nav.$navbar-text-light;
 }
 
-.cart-menu {
-  position: relative;
-}
+.cart-btn-container {
+  .cart-btn {
+    color: nav.$navbar-text !important;
+    @include mixins.hover-effect(nav.$navbar-hover-bg);
 
-.cart-btn {
-  color: nav.$navbar-text !important;
-  @include mixins.hover-effect(nav.$navbar-hover-bg);
-
-  .mat-badge-content {
-    @include mixins.badge(nav.$navbar-primary, white, nav.$navbar-badge-size);
-    top: -5px;
-    right: -5px;
-    font-size: 0.75rem;
-  }
-}
-
-.cart-dropdown {
-  @include mixins.dropdown-panel(nav.$navbar-cart-dropdown-width);
-
-  .mat-menu-panel {
-    padding: 0;
-    min-width: nav.$navbar-cart-dropdown-width;
-  }
-}
-
-.cart-dropdown-header {
-  padding: 1rem;
-  background: nav.$navbar-dropdown-gradient;
-
-  h4 {
-    margin: 0;
-    font-size: 1rem;
-    font-weight: nav.$font-weight-bold;
-    color: nav.$navbar-text-dark;
-  }
-}
-
-.cart-dropdown-content {
-  padding: 1rem;
-  min-height: 120px;
-}
-
-.empty-cart {
-  text-align: center;
-  color: nav.$navbar-text-light;
-
-  mat-icon {
-    font-size: 3rem;
-    width: 3rem;
-    height: 3rem;
-    margin-bottom: 0.5rem;
-    opacity: 0.5;
-  }
-
-  p {
-    margin: 0 0 1rem 0;
-    font-size: 0.875rem;
-  }
-
-  .btn-small {
-    padding: 0.375rem 0.75rem;
-    font-size: 0.75rem;
-  }
-}
-
-.cart-items {
-  p {
-    margin: 0;
-    font-size: 0.875rem;
-    color: nav.$navbar-text-dark;
-  }
-}
-
-.cart-dropdown-footer {
-  padding: 1rem;
-  background: #f8f9fa;
-
-  .btn-full {
-    width: 100%;
-    justify-content: center;
-  }
-}
-
-.dropdown-item {
-  @include mixins.flex-inline(0.75rem);
-  padding: 0.75rem 1rem;
-  font-size: nav.$font-size-nav;
-  color: nav.$navbar-text-dark !important;
-  transition: nav.$navbar-transition;
-
-  backdrop-filter: blur(9px) saturate(189%);
-  -webkit-backdrop-filter: blur(9px) saturate(189%);
-  background-color: rgba(17, 25, 40, 0.6);
-  border-radius: 0;
-  border: 1px solid rgba(255, 255, 255, 0.125);
-
-  &:hover {
-    background-color: rgba(59, 130, 246, 0.08);
-  }
-
-  &.dropdown-item--logout {
-    color: nav.$navbar-danger-color !important;
-
-    &:hover {
-      background-color: nav.$navbar-danger-hover;
+    .mat-badge-content {
+      @include mixins.badge(nav.$navbar-primary, white, nav.$navbar-badge-size);
+      top: -5px;
+      right: -5px;
+      font-size: 0.75rem;
     }
-
-    mat-icon {
-      color: nav.$navbar-danger-color;
-    }
-  }
-
-  mat-icon {
-    font-size: 1.125rem;
-    width: 1.125rem;
-    height: 1.125rem;
-    color: nav.$navbar-text-light;
   }
 }
 
@@ -348,26 +242,6 @@
   }
 }
 
-.btn-small {
-  padding: 0.375rem 0.75rem;
-  font-size: 0.75rem;
-}
-
-.btn-full {
-  width: 100%;
-  justify-content: center;
-}
-
-.debug-btn {
-  opacity: 0.5;
-  font-size: 0.75rem;
-  color: nav.$navbar-text !important;
-
-  &:hover {
-    opacity: 1;
-  }
-}
-
 .mobile-toggle {
   color: nav.$navbar-text !important;
   @include mq.show-on-mobile-only;
@@ -386,8 +260,8 @@
 .mobile-overlay {
   @include mixins.mobile-overlay(nav.$navbar-height);
 
-  &{
-     z-index: nav.$navbar-overlay-z-index;
+  & {
+    z-index: nav.$navbar-overlay-z-index;
   }
    
   &.mobile-overlay--visible {
