--- a/src/app/shared/cart-summary/cart-summary.html
+++ b/src/app/shared/cart-summary/cart-summary.html
@@ -8,7 +8,7 @@
       </h2>
       <div class="travel-cart-summary__items-count" *ngIf="summaryState.hasItems">
         <span class="material-symbols-outlined">inventory</span>
-        <span>{{ summaryState.totalItems }} {{ summaryState.totalItems === 1 ? 'paquete' : 'paquetes' }}</span>
+        <span>{{ summaryState.totalItems }} {{ summaryState.totalItems === 1 ? 'item' : 'items' }}</span>
       </div>
     </div>
   </header>
