--- a/src/app/components/cart/cart.html
+++ b/src/app/components/cart/cart.html
@@ -132,7 +132,7 @@
         <!-- Items List -->
         <div class="travel-cart-page__items-list">
           @if (cartState?.items && cartState.items.length > 0) {
-            @for (item of cartState.items; track item.id) {
+            @for (item of cartState.items; track trackByItemId(0, item)) {
               <app-cart-item
                 [item]="item"
                 [loading]="cartState.isLoading"
