--- a/src/app/components/layout/_variables.scss
+++ b/src/app/components/layout/_variables.scss
@@ -3,7 +3,7 @@ $navbar-primary: #1e40af;
 $navbar-primary-hover: color-mix(in srgb, #1e40af 90%, white);
 $navbar-secondary: #64748b;
 $navbar-background: #003b95;
-$navbar-text: #ffffff;
+$navbar-text: #4b4848;
 $navbar-text-dark: #030303;
 $navbar-text-light: #6b7280;
 $navbar-border: #e5e7eb;
