--- a/src/app/styles/_ripple.scss
+++ b/src/app/styles/_ripple.scss
@@ -1,10 +1,12 @@
 @use './_variables-moderns.scss' as vars;
 
 @mixin ripple($color: rgba(255, 255, 255, 0.3), $duration: 600ms) {
-  position: relative;
-  overflow: hidden;
-  cursor: pointer;
-  z-index: 0;
+  & {
+    position: relative;
+    overflow: hidden;
+    cursor: pointer;
+    z-index: 0;
+  }
 
   &::before {
     content: '';
